--- a/stile/style.css
+++ b/stile/style.css
@@ -1,20 +1,35 @@
 header {
     background-color: #2c3e50;
-    height: 80px;
+    height: 100px;
+}
+
+.cs-jumbo {
+    background-color: #1abc9c;
+    height: 50vh;
+}
+
+section {
+    padding: 2rem 0;
 }
 
 /* container */
 [class^="container"] {
     border: 1px dashed black;
+    height: 100%;
 }
 
 /* row */
 [class^="row"] {
     border: 1px dashed red;
+    height: 100%;
 }
 
 /* col */
-
 [class^="col"] {
     border: 1px dashed blue;
+    height: 100%;
+}
+
+.cs-portfolio {
+    height: 300px;
 }
