--- a/stile/style.css
+++ b/stile/style.css
@@ -1,6 +1,3 @@
-header {
-    background-color: #2c3e50;
-}
 
 .cs-jumbo {
     background-color: #1abc9c;
@@ -10,6 +7,42 @@ header {
 section {
     margin: 2rem 0;
 }
+
+/* navbar */
+
+.bg-light-blue {
+    background-color: #2c3e50;
+}
+
+.cs-nav-link {
+    color: white;
+}
+
+/* resettare l'hover di bootstraap */
+
+.cs-nav-link:focus,
+.cs-nav-link:hover  {
+    color: white;
+}
+
+/* cambiare il colore del bordo del burger */
+
+.cs-navbar-toggler {
+    border: 1px solid white;
+}
+
+/* cambiare il colore del burger menu */
+
+.cs-navbar-toggler-icon {
+    filter: invert(70%) sepia(100%) saturate(0%) hue-rotate(254deg) brightness(102%) contrast(105%);
+}
+
+/* fine navbar */
+
+
+
+
+
 
 .cs-portfolio .col {
     height: 200px;
