--- a/stile/style.css
+++ b/stile/style.css
@@ -1,18 +1,36 @@
-
-.cs-jumbo {
-    background-color: #1abc9c;
-    height: 400px;
-}
+/* utils */
 
 section {
     margin: 2rem 0;
 }
 
-/* navbar */
-
 .bg-light-blue {
     background-color: #2c3e50;
 }
+
+.bg-white {
+    background-color: white;
+}
+
+.color-blue {
+    color: #2c3e50;
+}
+/* generals */
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+ul, li {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+/* navbar */
+
+
 
 .cs-nav-link {
     color: white;
@@ -40,13 +58,43 @@ section {
 /* fine navbar */
 
 
+/* jumbo */
 
 
-
-
-.cs-portfolio .col {
-    height: 200px;
+.cs-jumbo {
+    background-color: #1abc9c;
 }
+
+
+.star-separator {
+    gap: 10px;
+    margin: 0 auto;
+}
+
+.star-separator i {
+    font-size: 24px;
+}
+
+.line {
+    width: 60px;
+    height: 4px;
+}
+
+/* fine jumbo */
+
+
+/* portfolio */
+
+.cs-portfolio img {
+    border-radius: 10px;
+    
+}
+
+
+
+
+/* fine portfolio */
+
 
 .cs-about {
     height: 500px;
@@ -70,19 +118,53 @@ section {
 
 
 /* container */
-[class^="container"] {
+/* [class^="container"] {
     border: 1px dashed black;
     height: 100%;
-}
+} */
 
 /* row */
-[class^="row"] {
+/* [class^="row"] {
     border: 1px dashed red;
     height: 100%;
-}
+} */
 
 /* col */
-[class^="col"] {
+/* [class^="col"] {
     border: 1px dashed blue;
+} */
+
+@media screen and (min-width:720px) {
+    /* aumentare le dimensioni del separator */
+    .star-separator {
+        gap: 10px;
+        margin: 0 auto;
+    }
+    
+    .star-separator i {
+        font-size: 26px;
+    }
+
+    .line {
+        width: 100px;
+    }
+
+    .cs-jumbo-ul {
+        font-size: 1.3rem;
+    }
 }
 
+
+@media screen and (min-width:960px) {
+    /* aumentare le dimensioni del separator */
+    .star-separator {
+        gap: 20px;
+        margin: 0 auto;
+    }
+    
+    .star-separator i {
+        font-size: 30px;
+    }
+
+    
+}
